# nomadnotes

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  notes.db  package-lock.json
.github/workflows/: docker-image-backend.yml  docker-image-frontend.yml  docker-image.yml  rust.yml
nomadnotes-frontend/: .dockerignore  Dockerfile  dev-compose.yml  index.html  package-lock.json  package.json
nomadnotes-frontend/src/: App.tsx  apollo-client.ts  index.css  main.tsx  vite-env.d.ts
nomadnotes-frontend/src/components/: NoteForm.tsx  NoteView.tsx  NotesList.css  NotesList.tsx
nomadnotes-frontend/src/graphql/: mutations.ts  queries.ts
src/: cli.rs  db.rs  graphql.rs  main.rs  models.rs
