[package]
name = "nomadnotes"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.33.0", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
async-graphql = "7.0.15"
async-graphql-axum = "7.0.15"
serde = { version = "1.0", features = ["derive"] }
tower-http = { version = "0.6.2", features = ["cors"] }
tower = "0.5.2"
axum = "0.8.1"
